<resources>
    <string name="app_name">ed-09</string>
    <string name="book_consutation">Book Consutation</string>
    <string name="_4_0">4.0</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="book_consutation1">Book Consutation</string>
    <string name="book_consutation2">Book Consutation</string>
    <string name="dr_raj_sing">Dr. Raj Sing</string>
    <string name="lorem_ipsum_30y_of_experience">Lorem Ipsum - 30y of experience</string>
    <string name="_4_03">4.0</string>
    <string name="todo2">TODO</string>
    <string name="_4_045">4.0</string>
    <string name="lorem_ipsum_27y_of_experience">Lorem Ipsum - 27y of experience</string>
    <string name="location">Location</string>
    <string name="kaira">Kaira</string>
    <string name="title_activity_segunda_tela">Segunda_Tela</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>