<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SegundaTela">


    <TextView
        android:id="@+id/textView45"
        android:layout_width="182dp"
        android:layout_height="33dp"
        android:text="Ms. Jiya Sharma "
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="229dp"
        android:layout_height="17dp"
        android:text="Lorem Ipsum - 27y of experience
"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:text="@string/_4_045"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/button21"
        android:layout_width="158dp"
        android:layout_height="37dp"
        android:backgroundTint="#F6F6F6"
        android:text="@string/book_consutation"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button18"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:backgroundTint="#FFC107"
        android:text="@string/book_appointment"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="182dp"
        android:layout_height="33dp"
        android:text="Ms. Jiya Sharma "
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button19"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:backgroundTint="#FFC107"
        android:text="@string/book_appointment"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/button17"
        android:layout_width="158dp"
        android:layout_height="37dp"
        android:backgroundTint="#F6F6F6"
        android:text="@string/book_consutation"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="82dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        app:srcCompat="@drawable/doctor__1_"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:text="@string/_4_045"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="229dp"
        android:layout_height="17dp"
        android:text="Lorem Ipsum - 27y of experience
"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="81dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@drawable/doctor"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="137dp"
        android:layout_height="33dp"
        android:text="@string/dr_raj_sing"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/button20"
        android:layout_width="158dp"
        android:layout_height="37dp"
        android:backgroundTint="#F6F6F6"
        android:text="@string/book_consutation"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="82dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:srcCompat="@drawable/doctor__2_"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button13"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:backgroundTint="#FFC107"
        android:text="@string/book_appointment"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="205dp"
        android:layout_height="19dp"
        android:text="@string/lorem_ipsum_30y_of_experience"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:text="@string/_4_03"
        android:textColor="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="266dp"
        android:layout_height="53dp"
        android:text="Consultation"
        android:textColor="#000000"
        android:textSize="44dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/tela"
        android:layout_width="75dp"
        android:layout_height="36dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:text="Order"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorHint="#00FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="#00FFFFFF" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="67dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/shopping_cart"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="44dp"
        android:layout_height="18dp"
        android:text="Profile
"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="130px"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/order"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="45dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/user"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="69dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/television"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="88dp"
        android:layout_height="19dp"
        android:text="Nutri Tracker
"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="41dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/messenger"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="84dp"
        android:layout_height="16dp"
        android:text="Consultation
"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>